--- a/index.html
+++ b/index.html
@@ -22,8 +22,16 @@
   </div>
 
 
-  <footer>
-    Made with ❤️ in London.
+  <footer id="footer">
+
+    <p> <a href="https://twitter.com/jay_patel_84"><i class="social fab fa-twitter"></i></a>
+        <a href="https://www.facebook.com/Jaypatidar84/"><i class="social fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/thenatureclicks_jp/"><i class="social fab fa-instagram"></i></a>
+        <a href="mailto:jrp5252@gmail.com"><i class="social fas fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/jay-patel-096128153/"><i class="social fab fa-linkedin"></i></a></p>
+
+    <p class="footer">© Copyright 2022 @jp_natureclicks</p>
+
   </footer>
   <script src="index.js" charset="utf-8"></script>
 </body>
