--- a/index.html
+++ b/index.html
@@ -2,10 +2,33 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
-  <title>Drum Kit</title>
-  <link rel="stylesheet" href="styles.css">
+
+<!-- Required meta tags -->
+<meta charset="utf-8">
+<title>🥁Drum Kit🎶</title>
+
+<!-- Google fonts --><link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;900&family=Ubuntu&display=swap" rel="stylesheet">
+  
+
+<!-- CSS stylesheets -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link rel="stylesheet" href="styles.css">
+
+<!-- Font awesome -->
+<script src="https://kit.fontawesome.com/f7a35ffbb2.js" crossorigin="anonymous"></script>
+
+
+
+
+
+
+
+
+
 </head>
 
 <body>
